--- a/HBR-Proportional-Valve/HBR-Proportional-Valve.vcxproj.filters
+++ b/HBR-Proportional-Valve/HBR-Proportional-Valve.vcxproj.filters
@@ -32,6 +32,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="board.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="logger.c">
       <Filter>Source Files</Filter>
     </ClCompile>
